# neotop

./: .gitignore  .semgrepignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  VMPLAN.md  deny.toml  justfile
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md  setup-branch-protection.sh
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  security.yml
.obsidian/: README.md  app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  workspace.json
.obsidian/snippets/: docs-readable.css  mermaid-fullwidth.css
benches/: classify.rs  orbit_build.rs  procs_snapshot.rs
docs/: architecture.md  contributing.md  controls.md  glossary.md  grouping.md  index.md  modules.md  performance.md  platforms-linux.md  platforms-macos.md  release-process.md  roadmap.md  status.md  theming.md
src/: battery.rs  container_macos.rs  disk.rs  disk_macos.rs  elf.rs  errors.rs  gpu.rs  gpu_macos.rs  groups.rs  host.rs  ioreport_macos.rs  kvm.rs  lib.rs  main.rs  net.rs  net_macos.rs  orbit.rs  passthrough.rs  proc.rs  procs.rs  smc_macos.rs  temp.rs  temp_macos.rs  theme.rs  topology.rs  topology_macos.rs  vcpus.rs  vm.rs
tests/: cli_smoke.rs
