[package]
name = "neotop"
version = "0.18.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/nt2311-vn/neotop"
description = "Linux TUI for host metrics, processes, and GPU activity (CPU spectrum, NVIDIA + AMD GPU, container groups)"
authors = ["nt2311"]
keywords = ["tui", "monitor", "process", "system", "gpu"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "neotop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
rustix = { version = "0.38", features = ["param", "process"] }
# Optional: NVIDIA management library bindings. The crate dlopens
# libnvidia-ml.so at runtime (NOT linked at build time), so the
# binary builds fine on machines without the NVIDIA driver and
# only "lights up" when the library is present. Init failures fall
# back gracefully to the existing detect-only behaviour for NVIDIA
# cards.
nvml-wrapper = { version = "0.12", optional = true }

[features]
default = ["nvml"]
nvml = ["dep:nvml-wrapper"]

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
