[package]
name = "neotop"
version = "0.21.1"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/nt2311-vn/neotop"
homepage = "https://github.com/nt2311-vn/neotop"
description = "Linux TUI for host metrics, processes, GPU activity, containers, and KVM virtual machines"
authors = ["nt2311"]
keywords = ["tui", "monitor", "process", "gpu", "kvm"]
categories = ["command-line-utilities", "os::linux-apis", "visualization"]
readme = "README.md"
# Only the files end-users (`cargo install neotop`) actually need.
# Keeps the published tarball lean and avoids shipping internal
# planning docs / CI policy / dev tooling that have no meaning
# outside the GitHub repo.
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[[bin]]
name = "neotop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1"
rustix = { version = "0.38", features = ["param", "process"] }
# Optional: NVIDIA management library bindings. The crate dlopens
# libnvidia-ml.so at runtime (NOT linked at build time), so the
# binary builds fine on machines without the NVIDIA driver and
# only "lights up" when the library is present. Init failures fall
# back gracefully to the existing detect-only behaviour for NVIDIA
# cards.
nvml-wrapper = { version = "0.12", optional = true }

[features]
default = ["nvml"]
nvml = ["dep:nvml-wrapper"]

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
