[package]
name = "neotop"
version = "0.29.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/nt2311-vn/neotop"
homepage = "https://github.com/nt2311-vn/neotop"
description = "Linux-first terminal system monitor: per-core CPU spectrum with SMT/NUMA, NVIDIA/AMD/Intel GPU dashboards with i915 per-engine breakdown, KVM hypervisor insight, container/runtime process grouping, Catppuccin themes"
authors = ["nt2311"]
keywords = ["tui", "monitor", "process", "gpu", "kvm"]
categories = ["command-line-utilities", "os::linux-apis", "visualization"]
readme = "README.md"
# Only the files end-users (`cargo install neotop`) actually need.
# Keeps the published tarball lean and avoids shipping internal
# planning docs / CI policy / dev tooling that have no meaning
# outside the GitHub repo.
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[lib]
name = "neotop"
path = "src/lib.rs"

[[bin]]
name = "neotop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1"
toml = "1.1"
serde = { version = "1", features = ["derive"] }
dirs = "6"

# Optional: NVIDIA management library bindings. The crate dlopens
# libnvidia-ml.so / libnvidia-ml.dylib at runtime (NOT linked at build
# time), so the binary builds fine on machines without the NVIDIA driver
# and only "lights up" when the library is present. Init failures fall
# back gracefully to the existing detect-only behaviour for NVIDIA
# cards. Works on Linux and macOS.
nvml-wrapper = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "classify"
harness = false

[[bench]]
name = "orbit_build"
harness = false

[[bench]]
name = "procs_snapshot"
harness = false

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "0.38", features = ["param", "process"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
# IOKit + Core Foundation bindings for GPU discovery
# (`IOServiceMatching("IOAccelerator")` → `PerformanceStatistics`
# CFDictionary) and temperature sensor reads (SMC user-client on
# Intel; IOReport channel subscription on Apple Silicon). Both
# crates are macOS-only by construction, so they add nothing to
# the Linux build.
core-foundation = "0.10"
core-foundation-sys = "0.8"
io-kit-sys = "0.5"
mach2 = "0.6"

[features]
default = ["nvml", "i915-pmu"]
nvml = ["dep:nvml-wrapper"]
i915-pmu = []

[lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
